# openwrt-kestrel

./: GNUmakefile  README.md  install.sh
configs/: guest.conf.example  untrusted.conf.example
extra-networks/: README.md  install.sh
extra-networks/configs/: guest.conf.example  untrusted.conf.example
extra-networks/kestreld-rs/: Cargo.toml
extra-networks/kestreld-rs/src/: cgi.rs  main.rs  state.rs
extra-networks/kestreld-rs/src/routes/: device.rs  status.rs
extra-networks/router-ui-rs/src/data/: nft.rs
extra-networks/tools/: _lib.sh  approve-access.cgi  approve-join.cgi  bandwidth-check.sh  check-access-log.sh  device.cgi  digest.sh  network.cgi  regen-inspect.sh  rotate-password.cgi  rotate-password.sh  status.cgi
release/openwrt/: Makefile
split-routing/: install.sh  vpn-bg.conf  vpn-uk.conf
split-routing/docs/: mullvad-routing.md  troubleshooting.md
split-routing/nft-resolve-rs/: Cargo.toml
split-routing/nft-resolve-rs/src/: args.rs  classify.rs  main.rs  nft.rs  resolve.rs  source.rs
split-routing/nft-resolve-rs/src/parse/: adblock.rs  auto.rs  clash.rs  dnsmasq.rs  hosts.rs  ipset.rs  mod.rs  oneper.rs  rpz.rs  unbound.rs  url.rs
tools/: allow-service.sh  approve-access.cgi  check-access-log.sh  expose-port.sh  rotate-password.cgi  status.cgi  unexpose-port.sh
